[tool.poetry]
name = "unifai"
version = "0.1.0"
description = ""
authors = ["Ekaterina Urmanova"]
readme = "README.md"
packages = [
  {include = "unifai"}
]

[tool.poetry.dependencies]
torch = ">=2.0.0, !=2.0.1"
python = "^3.10"
transformers = ">=4.28.0"
grpcio = "^1.56.0"
sentencepiece = "^0.1.99"

[tool.poetry.scripts]
preload_models = 'unifai.TTTT:preload_models'
server = 'unifai.server:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
